# star-template

./: .gitignore  .npmignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  eslint.config.cjs  mypy.ini  new-repo.sh  package-lock.json  package.json  pyproject.toml  sbom.cdx.json  star-template-ts-0.1.0.tgz  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
docs/: approval-closeout-notes.md  branch-cleanup-notes.md  calm-review-record.md  change-review-notes.md  change-scope-checklist.md  ci-review-notes.md  clean-handoff-checklist.md  clean-handoff-record.md  closeout-readiness-notes.md  closing-review-checklist.md  contribution-checklist.md  controlled-review-record.md  daily-maintenance-plan.md  daily-review-closeout-plan.md  daily-review-record.md  dependency-review-notes.md  documentation-review-notes.md  final-diff-review-notes.md  final-evidence-checklist.md  final-maintenance-handoff.md  final-maintenance-record.md  final-review-checklist.md  final-review-closeout-record.md  final-review-evidence-log.md  focused-closeout-record.md  follow-up-boundary-notes.md  fork-maintenance-notes.md  handoff-review-log.md  issue-review-notes.md  issue-triage-checklist.md  local-review-guide.md  maintainer-evidence-log.md  maintainer-review-window.md  maintenance-checkpoint-notes.md  maintenance-completion-log.md  maintenance-handoff-checklist.md  maintenance-notes.md  maintenance-review-plan.md  maintenance-session-evidence.md  maintenance-summary-notes.md  (+48 more)
scripts/: preflight.zsh
src/: index.ts
(+19 files in other folders)
