[tool.poetry]
name = "star-template-py"
version = "0.1.0"
description = "CoderDeltaLAN star template (Python)"
authors = ["CoderDeltaLAN <coderdeltalan.cargo784@8alias.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CoderDeltaLAN/star-template"
repository = "https://github.com/CoderDeltaLAN/star-template"
packages = [{include = "star_template", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.6.0"
black = "^24.0.0"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "node_modules", "dist", "build", ".pytest_cache", "coverage"]

[tool.black]
line-length = 100
extend-exclude = '''
(\.venv|node_modules|dist|build|\.pytest_cache|coverage)
'''

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=100"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
